--- a/index.html
+++ b/index.html
@@ -604,6 +604,50 @@
                 display: block;
             }
         }
+        .contact-section {
+            padding: 5rem 5%;
+            background-color: white;
+        }
+
+        .contact-container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .contact-form {
+            display: grid;
+            gap: 1.5rem;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            padding: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-family: inherit;
+            font-size: 1rem;
+            transition: border-color 0.3s;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: var(--primary);
+        }
+
+        .form-group textarea {
+            resize: vertical;
+        }
+
+        .contact-form .btn {
+            justify-self: start;
+            margin-top: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -622,8 +666,11 @@
     </header>
 
     <section class="hero">
-        <h1>Smart Pricing for <span>Smart Tradies</span></h1>
-        <p class="mission">Empowering the building and construction industry with real-time building material price comparison and streamlined quoting process to help reduce business costs and increase productivity.</p>
+        <div class="logo">
+            <img src="images/trade_spot_logo_whitetext.png" alt="TradeSpot Logo"  style="width: 25%; height: auto;">
+        </div>
+        <h1>The essential tool for <span>modern tradies</span></h1>
+        <p class="mission">Building the digital infrastructure to help reduce business costs and increase productivity in the construction industry.</p>
     </section>
     
     <section class="features" id="features">
@@ -759,3 +806,67 @@
                 <p>We aim to help tradies across Australia save time, reduce costs, and grow their businesses with better material sourcing and quoting tools.</p>
             </div>
             
+    <section class="contact-section" id="contact">
+            <div class="section-title">
+                <h2>Contact Us</h2>
+                <p>Have questions or want to learn more? Get in touch with our team.</p>
+            </div>
+            <div class="contact-container">
+                <form class="contact-form" action="https://formspree.io/f/xkgbqloz" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
+            </div>
+        </section>
+
+        <script>
+            // Handle form submission feedback
+            const form = document.querySelector('.contact-form');
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const submitBtn = form.querySelector('button[type="submit"]');
+                const originalBtnText = submitBtn.textContent;
+
+                try {
+                    // Show loading state
+                    submitBtn.textContent = 'Sending...';
+                    submitBtn.disabled = true;
+
+                    // Send form data
+                    const response = await fetch(form.action, {
+                        method: 'POST',
+                        body: new FormData(form),
+                        headers: {
+                            'Accept': 'application/json'
+                        }
+                    });
+
+                    if (response.ok) {
+                        alert('Message sent successfully! We'll get back to you soon.');
+                        form.reset();
+                    } else {
+                        throw new Error('Form submission failed');
+                    }
+                } catch (error) {
+                    alert('Oops! Something went wrong. Please try again later.');
+                    console.error('Form submission error:', error);
+                } finally {
+                    // Reset button
+                    submitBtn.textContent = originalBtnText;
+                    submitBtn.disabled = false;
+                }
+            });
+        </script>
+
+</body>
