update about us text

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
         <div class="about-container">
             <div class="about-content">
                 <h2>Our Story</h2>
-                <p>Founded by a team of builders and software engineers frustrated with the lack of pricing transparency in the industry. We're on a mission to level the playing field for trades and suppliers alike.</p>
+                <p>Founded by a team of tradies and software engineers frustrated with the lack of pricing transparency in the industry. We're on a mission to level the playing field for trades and suppliers alike.</p>
                 <p>After years of seeing tradies struggle with material pricing and quoting inefficiencies, we decided to build the tool we wished we had. Every feature in TradeSpot comes from real-world trade experience and solves genuine problems faced on job sites every day.</p>
                 <p>We aim to help tradies across Australia save time, reduce costs, and grow their businesses with better material sourcing and quoting tools.</p>
             </div>
