update content and icons

--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
         </div>
         <nav>
             <a href="#features">Features</a>
-            <a href="#for-suppliers">For Suppliers</a>
-            <a href="#for-tradies">For Tradies</a>
+            <a href="#for-suppliers" data-tab="suppliers">For Suppliers</a>
+            <a href="#for-tradies" data-tab="tradies">For Tradies</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -680,34 +680,34 @@
         </div>
         <div class="feature-grid">
             <div class="feature-card">
-                <div class="feature-icon">📊</div>
-                <h3>Real-Time Price Comparison</h3>
-                <p>Instantly compare prices across hundreds of suppliers in your area. Save up to 30% on materials by finding the best deals based on your job location and requirements.</p>
+                <div class="feature-icon">🔍</div>
+                <h3>Real-Time Product Search and Price Comparison</h3>
+                <p>Instantly compare prices across hundreds of suppliers in your area. Save on materials by finding the best deals based on your job location and requirements.</p>
             </div>
             <div class="feature-card">
-                <div class="feature-icon">⚡</div>
+                <div class="feature-icon">🔁</div>
                 <h3>Streamlined Quoting</h3>
-                <p>Generate professional quotes in minutes with our trade-specific tools. Automatically calculate quantities, apply your markup, and send branded proposals directly to clients.</p>
+                <p>SmartQuote for quick, accurate quoting from multiple suppliers.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">📱</div>
-                <h3>Mobile-First Design</h3>
-                <p>Access everything you need from anywhere - on site, in your van, or at home. Our app is designed for the way tradies actually work, with offline capabilities for remote job sites.</p>
+                <h3>Integrated Mobile-First Design</h3>
+                <p>Access everything you need from anywhere - on site, in your van, or at home. TradeSpot is designed for the way tradies actually work.</p>
             </div>
             <div class="feature-card">
-                <div class="feature-icon">📈</div>
+                <div class="feature-icon">📊</div>
                 <h3>Business Insights</h3>
-                <p>Track job profitability, material usage trends, and supplier performance over time. Make data-driven decisions to improve your bottom line with easy-to-understand reports.</p>
+                <p>Track job costs, material usage and supplier spend over time. Make data-driven decisions to improve your bottom line.</p>
             </div>
             <div class="feature-card">
-                <div class="feature-icon">🔄</div>
-                <h3>Inventory Management</h3>
-                <p>Keep track of your materials across multiple job sites. Reduce waste and never run out of essential supplies with automatic reorder notifications.</p>
+                <div class="feature-icon">🌟</div>
+                <h3>Loyalty rewards program</h3>
+                <p>Enjoy savings through discounts and exclusive deals</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">👥</div>
                 <h3>Trade Community</h3>
-                <p>Connect with other professionals, share supplier recommendations, and get help with complex jobs. Build your network and grow your business through qualified referrals.</p>
+                <p>Connect with other professionals, share recommendations, and get help. Build your network and grow your business through qualified referrals.</p>
             </div>
         </div>
     </section>
@@ -726,72 +726,80 @@
 
         <div class="tab-content active" id="suppliers-tab">
             <div class="value-prop">
-                <div class="value-prop-icon">🚀</div>
+                <div class="value-prop-icon">📈</div>
                 <div class="value-prop-content">
-                    <h3>Grow Digital Sales</h3>
-                    <p>TradeSpot helps grow sales and win digital customers without building your own tech. Get your products in front of qualified trade buyers with our easy-to-use platform.</p>
+                    <h3>Grow digital sales</h3>
+                    <p>TradeSpot helps gain customers and grow sales with target promotions without building your own tech.</p>
                 </div>
             </div>
             <div class="value-prop">
-                <div class="value-prop-icon">📱</div>
+                <div class="value-prop-icon">🤝</div>
                 <div class="value-prop-content">
-                    <h3>Digital Presence Without the Hassle</h3>
+                    <h3>Streamlined onboarding</h3>
                     <p>No need to build your own e-commerce platform or app. TradeSpot gives you immediate digital visibility to thousands of active tradies looking to purchase materials.</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">📊</div>
                 <div class="value-prop-content">
-                    <h3>Data-Driven Insights</h3>
-                    <p>Understand demand patterns, popular products, and pricing effectiveness. Make smarter inventory and pricing decisions with anonymized market data.</p>
+                    <h3>Sales analytics and Insights</h3>
+                    <p>Understand demand patterns, popular products, and pricing effectiveness. Make smarter inventory and pricing decisions with market data.</p>
                 </div>
             </div>
+            <div class="value-prop">
+                <div class="value-prop-icon">💬</div>
+                <div class="value-prop-content">
+                    <h3>Direct customer engagement</h3>
+                    <p>Direct messaging and notifications provide more streamlined communications with customers.</p>
+                </div>
+            </div>
+
         </div>
 
         <div class="tab-content" id="tradies-tab">
             <div class="value-prop">
                 <div class="value-prop-icon">💰</div>
                 <div class="value-prop-content">
-                    <h3>Stop Overpaying</h3>
-                    <p>Stop overpaying for materials. TradeSpot gives you instant access to the best prices from local suppliers, saving you time and money on every job.</p>
+                    <h3>Transparent Pricing</h3>
+                    <p>TradeSpot allows pricing comparison to find the best prices from local suppliers, saving you time and money on every job.</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">⏱️</div>
                 <div class="value-prop-content">
-                    <h3>Save Hours Every Week</h3>
-                    <p>No more driving around for quotes or making endless phone calls. Find the best materials at the best prices in minutes, not days.</p>
+                    <h3>Faster Quoting</h3>
+                    <p>No more emailing or making endless phone calls for quotes. Find materials at the best prices in minutes, not days.</p>
                 </div>
             </div>
             <div class="value-prop">
-                <div class="value-prop-icon">📄</div>
+                <div class="value-prop-icon">📱</div>
                 <div class="value-prop-content">
-                    <h3>Professional Quotes Faster</h3>
-                    <p>Create detailed, professional quotes in a fraction of the time. Win more jobs with faster responses and transparent pricing.</p>
+                    <h3>Integrated mobile first digital platform</h3>
+                    <p>Integrated multi-supplier mobile first platform enables access to everything on your smartphone.</p>
                 </div>
             </div>
         </div>
 
         <div class="tab-content" id="investors-tab">
             <div class="value-prop">
-                <div class="value-prop-icon">🔍</div>
+                <div class="value-prop-icon">🌱</div>
                 <div class="value-prop-content">
                     <h3>Untapped Market Potential</h3>
-                    <p>TradeSpot is unlocking a huge offline market with a scalable, high-margin digital platform for trade supply. The construction materials market is worth billions yet remains largely undigitized.</p>
+                    <p>TradeSpot unlocks and integrates a largely offline and fragmented market with a scalable digital platform</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">📈</div>
                 <div class="value-prop-content">
                     <h3>Scalable Business Model</h3>
-                    <p>Our platform creates network effects - more suppliers attract more tradies, which attracts more suppliers. This creates a defensible market position with increasing returns to scale.</p>
+                    <p>The platform enables the network effect of more suppliers attracting more tradies, which then attracts even more suppliers, increasing scale of returns.</p>
                 </div>
             </div>
             <div class="value-prop">
-                <div class="value-prop-icon">💼</div>
+                <div class="value-prop-icon">💰</div>
                 <div class="value-prop-content">
                     <h3>Multiple Revenue Streams</h3>
-                    <p>From subscription plans to transaction fees and premium features, our diversified revenue model provides stability and growth potential.</p>
+                    <p>A diversified revenue model providing stability and growth potential.</p>
                 </div>
             </div>
         </div>
@@ -802,8 +810,8 @@
             <div class="about-content">
                 <h2>Our Story</h2>
                 <p>Founded by a team of tradies and software engineers frustrated with the lack of pricing transparency in the industry. We're on a mission to level the playing field for trades and suppliers alike.</p>
-                <p>After years of seeing tradies struggle with material pricing and quoting inefficiencies, we decided to build the tool we wished we had. Every feature in TradeSpot comes from real-world trade experience and solves genuine problems faced on job sites every day.</p>
-                <p>We aim to help tradies across Australia save time, reduce costs, and grow their businesses with better material sourcing and quoting tools.</p>
+                <p>After years of seeing tradies struggle with material pricing and quoting inefficiencies, we decided to build the tool we needed. Every feature in TradeSpot comes from real-world trade experience and solves genuine problems faced on job sites every day.</p>
+                <p>We aim to help tradies across Australia save time, reduce costs, and grow their businesses with better material sourcing and job pricing tools.</p>
             </div>
             
     <section class="contact-section" id="contact">
@@ -874,19 +882,38 @@
             document.addEventListener('DOMContentLoaded', function() {
                 const tabButtons = document.querySelectorAll('.tab-btn');
                 const tabContents = document.querySelectorAll('.tab-content');
+                const navLinks = document.querySelectorAll('nav a[data-tab]');
 
+                // Function to switch tabs
+                function switchTab(tabName) {
+                    // Remove active class from all buttons and contents
+                    tabButtons.forEach(btn => btn.classList.remove('active'));
+                    tabContents.forEach(content => content.classList.remove('active'));
+
+                    // Add active class to corresponding button
+                    document.querySelector(`.tab-btn[data-tab="${tabName}"]`).classList.add('active');
+
+                    // Show corresponding content
+                    document.getElementById(`${tabName}-tab`).classList.add('active');
+
+                    // Scroll to the value-props section
+                    document.getElementById('for-suppliers').scrollIntoView({ behavior: 'smooth' });
+                }
+
+                // Add click handlers for tab buttons
                 tabButtons.forEach(button => {
                     button.addEventListener('click', () => {
-                        // Remove active class from all buttons and contents
-                        tabButtons.forEach(btn => btn.classList.remove('active'));
-                        tabContents.forEach(content => content.classList.remove('active'));
+                        const tabName = button.getAttribute('data-tab');
+                        switchTab(tabName);
+                    });
+                });
 
-                        // Add active class to clicked button
-                        button.classList.add('active');
-
-                        // Show corresponding content
-                        const tabId = button.getAttribute('data-tab') + '-tab';
-                        document.getElementById(tabId).classList.add('active');
+                // Add click handlers for navigation links
+                navLinks.forEach(link => {
+                    link.addEventListener('click', (e) => {
+                        e.preventDefault(); // Prevent default anchor behavior
+                        const tabName = link.getAttribute('data-tab');
+                        switchTab(tabName);
                     });
                 });
             });
