--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🌟</div>
-                <h3>Loyalty rewards program</h3>
+                <h3>Loyalty Rewards Program</h3>
                 <p>Enjoy savings through discounts and exclusive deals</p>
             </div>
             <div class="feature-card">
@@ -728,28 +728,28 @@
             <div class="value-prop">
                 <div class="value-prop-icon">📈</div>
                 <div class="value-prop-content">
-                    <h3>Grow digital sales</h3>
+                    <h3>Grow Digital Sales</h3>
                     <p>TradeSpot helps gain customers and grow sales with target promotions without building your own tech.</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">🤝</div>
                 <div class="value-prop-content">
-                    <h3>Streamlined onboarding</h3>
+                    <h3>Streamlined Onboarding</h3>
                     <p>No need to build your own e-commerce platform or app. TradeSpot gives you immediate digital visibility to thousands of active tradies looking to purchase materials.</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">📊</div>
                 <div class="value-prop-content">
-                    <h3>Sales analytics and Insights</h3>
+                    <h3>Sales Analytics and Insights</h3>
                     <p>Understand demand patterns, popular products, and pricing effectiveness. Make smarter inventory and pricing decisions with market data.</p>
                 </div>
             </div>
             <div class="value-prop">
                 <div class="value-prop-icon">💬</div>
                 <div class="value-prop-content">
-                    <h3>Direct customer engagement</h3>
+                    <h3>Direct Customer Engagement</h3>
                     <p>Direct messaging and notifications provide more streamlined communications with customers.</p>
                 </div>
             </div>
@@ -774,7 +774,7 @@
             <div class="value-prop">
                 <div class="value-prop-icon">📱</div>
                 <div class="value-prop-content">
-                    <h3>Integrated mobile first digital platform</h3>
+                    <h3>Integrated Digital Mobile-first Platform</h3>
                     <p>Integrated multi-supplier mobile first platform enables access to everything on your smartphone.</p>
                 </div>
             </div>
