add copyright footer

--- a/index.html
+++ b/index.html
@@ -648,6 +648,10 @@
             justify-self: start;
             margin-top: 1rem;
         }
+        .copyright {
+            color: #999;       /* Keeping this slightly lighter than body text */
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
@@ -813,7 +817,7 @@
                 <p>After years of seeing tradies struggle with material pricing and quoting inefficiencies, we decided to build the tool we needed. Every feature in TradeSpot comes from real-world trade experience and solves genuine problems faced on job sites every day.</p>
                 <p>We aim to help tradies across Australia save time, reduce costs, and grow their businesses with better material sourcing and job pricing tools.</p>
             </div>
-            
+
     <section class="contact-section" id="contact">
             <div class="section-title">
                 <h2>Contact Us</h2>
@@ -837,6 +841,8 @@
                 </form>
             </div>
         </section>
+
+        <p class="copyright">© 2025 Mainrobin Pty Ltd. All rights reserved.</p>
 
         <script>
             // Handle form submission feedback
@@ -918,4 +924,5 @@
                 });
             });
         </script>
+
 </body>
